# Serenade

./: .gitignore  README.md  develop.ipynb  pyproject.toml
serenade/: pyproject.toml  scrap.py  transformDataset.py
serenade/serenade/Dataset/: Dataset.py  Scrapper.py
serenade/serenade/Models/: CNN.py
src/: main.py  scrap.py  transform_dataset.py
src/serenade/dataset/: data_transformer.py  dataset.py  scrapper.py
src/serenade/models/: cnn.py
