[project]
name = "serenade"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.3",
    "bs4>=0.0.2",
    "pandas>=2.2.3",
    "numba>=0.60.0",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.9.3",
    "ipykernel>=6.29.5",
    "click>=8.1.8",
    "torch>=2.6.0",
    "joblib>=1.4.2",
]

[build-system]
requires=["hatchling"]
build-backend="hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/serenade"]
