[tool.poetry]
name = "serenade"
version = "0.1.0"
description = ""
authors = ["TheophileBERTELOOT <thber64@ulaval.ca>"]
readme = "README.md"

[tool.poetry.scripts]
demo = "main:cli"
scrap = "scrap:cli"
transformDataset = "transformDataset:cli"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
bs4 = "^0.0.2"
pandas = "^2.2.3"
numba = "^0.60.0"
librosa = "^0.10.2.post1"
matplotlib = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
